2006-01-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/tasklet.py: Add a decorator, patch by Gustavo.
	Fixes 2368
	
2006-01-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_BaseDateTimeConverter.get_lang_constant): 
	Move lang_constant from being a class variable to an accessor
	since its undefined on win32. Fixes #2358

2005-12-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Library, Library.__init__): improve doc string

=== kiwi 1.9.3 ===
2005-12-15  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Added
	* kiwi/__version__.py: Bump
	
2005-12-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: Subclass propertyobject.

2005-12-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (SummaryLabel.update_total): Use 
	get_attribute and always convert to float.

	* kiwi/ui/views.py (SlaveView): Add simple notebook 
	validation support. It'll mark the text of the labels
	red if there are any widgets inside which are mandatory
	or invalid. Fixes bug 2286.

2005-12-14  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/hyperlink/hyperlink_demo.py:
	* kiwi/ui/hyperlink.py:

2005-12-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/delegates.py (SlaveDelegate.__init__) 
	(Delegate.__init__): API Change,
	move keyactions to the end of the list, to be as compatible
	as possible with the parent klasses.

	* kiwi/ui/delegates.py:
	* kiwi/ui/views.py:
	Cleanups:
	- Make a few variables private, remove duplicated code.
	- Reorganize variables
	- Refactor functionallity to methods

2005-12-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: Add support for check buttons
	in kiwi lists. Also emit cell-edited when changing a radio
	button.

	* kiwi/datatypes.py (currency): 
	(CurrencyConverter): 
	Add support for currency.
	(format_price): Use currency.format

	* kiwi/ui/widgets/list.py (List._cell_data_func): Add support for 
	currency here.
