@@ -1,3 +1,8 @@
+2006-01-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* tests/test_datatypes.py: Check if the locale is present before
+	running the tests. Fixes #2377
+
 2006-01-03  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/tasklet.py: Add a decorator, patch by Gustavo.
